--- a/frontgamepage.css
+++ b/frontgamepage.css
@@ -40,7 +40,7 @@ h3 {
 /* UTILITIES */
 
 .container {
-    background-image: url('image/board-361516_1920.jpg');
+    background-image: url('https://cdn.pixabay.com/photo/2017/03/12/17/54/quiz-2137664__340.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     width: 100vw;
