--- a/frontgamepage.css
+++ b/frontgamepage.css
@@ -40,7 +40,7 @@ h3 {
 /* UTILITIES */
 
 .container {
-    background-image: url('https://pixabay.com/illustrations/quiz-exam-test-examination-student-1799935/');
+    background-image: url('https://cdn.pixabay.com/photo/2015/07/19/10/00/school-work-851328__340.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     width: 100vw;
