--- a/frontgamepage.css
+++ b/frontgamepage.css
@@ -16,12 +16,12 @@ h2,
 h3,
 h4 {
     margin-bottom: 1rem;
-    color: #56a5eb;
+    color: #000000;
 }
 
 h1 {
     font-size: 5.4rem;
-    color: #56a5eb;
+    color: #43853D;
     margin-bottom: 5rem;
 }
 
