--- a/frontgamepage.css
+++ b/frontgamepage.css
@@ -34,7 +34,7 @@ h2 {
 h3 {
     font-size: 2.8rem;
     font-weight: 500;
-    color: #56a5eb;
+    color: #43853D;
 }
 
 /* UTILITIES */
@@ -85,7 +85,7 @@ h3 {
     border: 0.1rem solid #56a5eb;
     margin-bottom: 1rem;
     text-decoration: none;
-    color: #56a5eb;
+    color: #43853D;
     background-color: white;
 }
 
@@ -196,7 +196,7 @@ h3 {
     padding: 0;
     border-radius: 7px;
     border: none;
-    color: #56a5eb;
+    color: #43853D;
 }
 
 .radiobtn {
